--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</div>
 
 	<section class="section_one">
-		<img class="myPic" src="img/image1.jpg" alt="My picture">
+		<img class="myPic" src="img/023A9185.JPG" alt="My picture">
 		<div class="div_one">
 		<h1>About Me</h1>
 		<p class="aboutP">My name is Yosef Alnajjar, I'm 19 years old, I'm  a current university student, I study computer science at the Islamic University of Gaza,  I love learning new things and try things that other people don't find interesting, One of these things is coding, Which I do in my free times, I try to learn as much as I can about programming languages and how things work together, But I don't want to it just in my free times I want to do it the whole time.</p>
