--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Yosef Alnajjar</title>
 	<link rel="stylesheet" href="css/style.css">
@@ -55,14 +55,14 @@
 		<h1 class="headings">Hobbies</h1>
 		<div class="hobbies">
 		<div class="first_row">
-			<img class="pics" src="img/hobby1.jpg">
-			<img class="pics" src="img/hobby2.jpg">
-			<img class="pics" src="img/hobby3.jpg">
+			<img class="pics" src="img/hobby1.jpg" alt="hobby">
+			<img class="pics" src="img/hobby2.jpg" alt="hobby">
+			<img class="pics" src="img/hobby3.jpg" alt="hobby">
 		</div>
 		<div class="second_row">
-			<img class="pics" src="img/hobby4.jpg">
-			<img class="pics" src="img/hobby5.jpg">
-			<img class="pics" src="img/hobby6.jpg">
+			<img class="pics" src="img/hobby4.jpg" alt="hobby">
+			<img class="pics" src="img/hobby5.jpg" alt="hobby">
+			<img class="pics" src="img/hobby6.jpg" alt="hobby">
 		</div>
 	</div>
 	</section>
@@ -94,7 +94,6 @@
 			</span>
 		</div>
 	</div>
-
 
 </body>
 </html>
